src/App.css
.body{
  background-image: url('./src/bg-img.svg');
  background-repeat: no-repeat;
  background-size: 100%;
}

.header{
  display: flex;
  justify-content: flex-end;
  background: none;
  margin-right: 30%;
}

.text{
  color: gray;
  font-family: 'Comic Neue', cursive;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100%;
}

.main {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  height: 30rem;
  width: 60%;
}
.first-container{
  height: 500px;
  
  display: flex;
  flex-direction: column;
  justify-content: center;
  
}
.first-card {
  height: 400px;
  width: 250px;
  display: flex;
  flex-direction: column;
  background-image: url('./src/cardBG2 v2.png');
  background-size: 100%;
  box-shadow: 4px 4px 6px #282c34;
}

.center-img {
  display: flex;
  justify-content:center ;
  position: absolute; 
  margin-top: -23%;
  margin-left: 3.3%; 
}

.img{
  box-shadow: 0px 6px 6px 3px rgb(63, 63, 63);
  transition-duration: 1s ;
  transition-delay: 0.1s;
}

.grow {
  animation: grow 0.5s linear;
}
@keyframes grow {
  from { transform: scale(0); }
  to { transform: scale(1); }
}

.fade-in {
  animation: fade-in 2s linear;
}
@keyframes fade-in {
  from { opacity: 0; }
  to { opacity: 1; }
}


.fade-out {
  animation: fade-out 2s linear;
}
@keyframes fade-out {
  from { opacity: 1; }
  to { opacity: 0; }
}


/*
@keyframes grow {
  from { transform: scale(0); }
  to { transform: scale(1); }
}
*/

.name-hero {
  padding-left: 1%;
  padding-top: 58%;
  color: rgb(173, 6, 6);
  text-shadow: 1px 1px 3px white;
  margin: 00;
  font-family: 'Montserrat', sans-serif;
  border-bottom: 1px solid grey;
}

.name-hero-2{
  padding-left: 1%;
  padding-top: 58%;
  color: rgb(173, 6, 6);
  text-shadow: 1px 1px 3px white;
  margin: 00;
  font-family: 'Montserrat', sans-serif;
  border-bottom: 1px solid grey;
}

.info{
  padding-top: 3%;
}

.sec-text {
  color: rgb(44, 44, 44);
  margin: 0 0;
  padding-left: 2%; 
  font-family: 'Comic Neue', cursive;
  font-size:x-small;
}

.sec-text-2 {
  color: rgb(44, 44, 44);
  margin: 0 0 0 0;
  padding-left: 2%; 
  font-family: 'Comic Neue', cursive;
  font-size:x-small;
}


.secound-card {
  height: 400px;
  width: 250px;
  display: flex;
  flex-direction: column;
  background-image: url('./src/cardBG2 v2.png');
  background-size: 100%;
  box-shadow: 4px 4px 6px #282c34;
}

.group-buttons{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.battle-group{
  padding-top: 100%;
}

.battle-button{
  background-color: rgb(218, 44, 44);
  border-radius: 50%;
  width: 120px;
  height: 100px;
  border: none;
  box-shadow: 4px 4px 2px #282c34;
  color: white;
  text-shadow: 1px 1px 3px #282c34;
  font-size: 18px;
}

.main-button{
    font-size: 12px;
    border-radius: 0.5em;
    border-width: 0.1em;
    height: 3em;
    text-transform: uppercase;
    font-weight: bold;
    font-family: sans-serif;
    text-align: center;
    background-color: rgb(36, 35, 35);
    color: rgb(224, 222, 222);
    box-shadow: 4px 4px 2px #282c34;
    
    
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

button {
  font-size: calc(10px + 2vmin);
}

.chart{
  display: flex;
  justify-content:center ;
  position: absolute; 
  height: 250px;
  width: 250px;
  padding-top: 20%;
}

.hidden-element{
  visibility: hidden;

}

.giphy {
   position: absolute;
   padding-left: 20%;
}

.giphy-center{
  padding-top: 15%;
  display: flex;
  justify-content: center;
}

.invert{
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

.result{
  display: flex;
  position: absolute;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 75%;

}

.bar-chart{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60%;
  height: 70%;
}

.teste-cor{
  color: rgb(47, 47, 48);
  color: rgb(163, 27, 27);
}

